# shapes-hot-reload-demo

./: .gitignore  CMakeLists.txt  README.md  shapes.ini
src/: circle_shape.cc  circle_shape.hh  color_resolver.cc  color_resolver.hh  data_buffer.hh  demo.cc  file_reader.hh  file_reloader.cc  file_reloader.hh  formatted_error.hh  local_file_reader.cc  local_file_reader.hh  rectangle_shape.cc  rectangle_shape.hh  shape.hh  shape_factory.cc  shape_factory.hh  shape_importer.cc  shape_importer.hh  shape_importer_closed_state.cc  shape_importer_error.hh  shape_importer_open_state.cc  shape_importer_state.hh  utils.hh
